--- a/index.ipynb
+++ b/index.ipynb
@@ -278,16 +278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-11-fd993b030b49>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-fd993b030b49>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    review_counts = list(map(lamda restaurant:['review_count'], restaurants))\u001b[0m\n\u001b[0m                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[['review_count'],\n",
+       " ['review_count'],\n",
+       " ['review_count'],\n",
+       " ['review_count'],\n",
+       " ['review_count'],\n",
+       " ['review_count'],\n",
+       " ['review_count'],\n",
+       " ['review_count']]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
