--- a/index.ipynb
+++ b/index.ipynb
@@ -278,29 +278,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['review_count'],\n",
-       " ['review_count'],\n",
-       " ['review_count'],\n",
-       " ['review_count'],\n",
-       " ['review_count'],\n",
-       " ['review_count'],\n",
-       " ['review_count'],\n",
-       " ['review_count']]"
+       "[610, 11, 1373, 680, 54, 647, 25, 20]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "review_counts = list(map(lambda restaurant: rest['review_count'], restaurants))\n",
+    "review_counts = list(map(lambda restaurant: restaurant['review_count'], restaurants))\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
   },
