Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -311,7 +311,8 @@
    "outputs": [],
    "source": [
     "total_reviews = 0\n",
-    "for review_count in review c\n",
+    "for review_count in review counts:\n",
+    "    total_reviews\n",
     "total_reviews # 3420"
    ]
   },
