Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -523,7 +523,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return lsit(filter(lambda restaurnt: restaurant['pri']))"
+    "    return lsit(filter(lambda restaurnt: restaurant['price'] <=1, re))"
    ]
   },
   {
