Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -518,12 +518,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return lsit(filter(lambda restaurnt: restaurant['price'] <=1, re))"
+    "    return lsit(filter(lambda restaurnt: restaurant['price'] <=1, restaurants))"
    ]
   },
   {
