Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -556,7 +556,7 @@
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant[review]))"
+    "    return list(filter(lambda restaurant[review_price']))"
    ]
   },
   {
