--- a/index.ipynb
+++ b/index.ipynb
@@ -556,7 +556,7 @@
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant[review_price']))"
+    "    return list(filter(lambda restaurant['review_price'] <=10))"
    ]
   },
   {
